[package]
name = "clip"
version = "0.2.0"  # Incremented version to indicate changes
edition = "2021"

[dependencies]
clipboard = "0.5"
glob = "0.3"
tiktoken-rs = "0.5.2"
arboard = "3.4.1"
clap = { version = "4.5.18", features = ["derive"] }
image = "0.25.2"
infer = "0.16.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
